Closed
Bug 595911
Opened 15 years ago
Closed 15 years ago
TM: "Assertion failure: INT_FITS_IN_JSID(i),"
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla2.0b7
Tracking | Status | |
---|---|---|
blocking2.0 | --- | betaN+ |
People
(Reporter: gkw, Assigned: Waldo)
References
Details
(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
1.49 KB,
patch
|
brendan
:
review+
|
Details | Diff | Splinter Review |
[(delete(/x/ [x])) for each(x in [0, 0, 0, 0, 0, x, 0, 0, 0x40000001])]
asserts js debug shell on TM changeset f5e128da7b5f with -j at Assertion failure: INT_FITS_IN_JSID(i),
![]() |
Reporter | |
Updated•15 years ago
|
blocking2.0: --- → ?
![]() |
Reporter | |
Comment 1•15 years ago
|
||
autoBisect shows this is probably related to the following changeset:
The first bad revision is:
changeset: 42772:fc98415b2fad
user: Brendan Eich
date: Tue Jun 01 19:42:37 2010 -0700
summary: Trace JSOP_DEL{PROP,ELEM} (523452, r=gal).
Blocks: 523452
Updated•15 years ago
|
blocking2.0: ? → betaN+
Assignee | ||
Comment 2•15 years ago
|
||
Comment 3•15 years ago
|
||
Comment on attachment 484207 [details] [diff] [review]
Don't assume 32-bit integer implies INT_FITS_IN_JSID
Thanks, r=me.
/be
Attachment #484207 -
Flags: review?(brendan) → review+
Assignee | ||
Comment 4•15 years ago
|
||
Whiteboard: fixed-in-tracemonkey
Target Milestone: --- → mozilla2.0b8
Comment 5•15 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Target Milestone: mozilla2.0b8 → mozilla2.0b7
Comment 6•12 years ago
|
||
Automatically extracted testcase for this bug was committed:
https://hg.mozilla.org/mozilla-central/rev/efaf8960a929
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•