Bug 595911 - Don't assume 32-bit integer property names are also INT_FITS_IN_JSID.  r=brendan